IDAM-1443: logo wrap fix

--- a/css/global.scss
+++ b/css/global.scss
@@ -210,7 +210,7 @@
 .badge {
   top: -10px;
   right: -10px;
-  padding: 3px 7px;
+  padding: 4px 10px;
   border-radius: 50%;
   background: #d4351c;
   color: #ffffff;
@@ -226,7 +226,7 @@
   }
 
   &__logo {
-    flex: 1 100%;
+    flex: 1 0 auto;
   }
 
   &__content {
@@ -236,6 +236,7 @@
   }
 
   &__navigation-item {
-    padding: 5px 0 5px
+    padding: 5px 0 5px;
+    border-bottom: 0;
   }
 }
